feat: land runtime recovery control-plane, redis mirror, and phase2b llm fallback